# finance-data-pipelines

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: stack.md  tables.md
