[project]
name = "finance-data-pipelines"
version = "1.0"
description = "Projeto de engenharia de dados que consolida informações financeiras em múltiplos pipelines independentes."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dagster>=1.12.22",
    "faker>=40.12.0",
    "loguru>=0.7.3",
    "mypy>=1.20.0",
    "pandera>=0.30.1",
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
    "xlsxwriter>=3.2.9",
]
